--- a/index.html
+++ b/index.html
@@ -1,207 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Motion Energy – a powerful balm to relieve muscle and joint pain. Motion Energy boosts circulation. Try Motion Energy now in the USA.Motion Energy is a natural body balm specially formulated to relieve muscle and joint pain. Whether you're an athlete or work long hours, Motion Energy helps boost blood circulation, reduce inflammation, and provide fast-acting comfort. ">
-    <title>Motion Energy - Warming Body Balm Motion Energy for Muscle Relief </title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Motion Energy – a powerful balm to relieve muscle and joint pain. Motion Energy boosts circulation. Try Motion Energy now in the USA.Motion Energy is a natural body balm specially formulated to relieve muscle and joint pain. Whether you're an athlete or work long hours, Motion Energy helps boost blood circulation, reduce inflammation, and provide fast-acting comfort. ">
 
-    <!-- Favicon -->
-     <link rel="shortcut icon" href="./Images/home-image/motion-energy-logo.png" type="image/x-icon">
+  <title>Motion Energy - Warming Body Balm Motion Energy for Muscle Relief </title>
 
-    <!-- Canonical Tag add -->
-     
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
-<body class="font-sans text-gray-800">
-    <!-- Navbar -->
-    <header class="bg-gradient-to-r from-blue-600 to-blue-800 text-white sticky top-0 z-50">
-        <nav class="container mx-auto flex items-center justify-between p-4">
-            <div class="flex justify-center items-center gap-4">
-                <img class="w-14 h-14" src="./Images/home-image/motion-energy-logo.png" alt="">
-            <h2 class="text-2xl font-bold"><a href="#">Motion Energy</a></h2>
-            </div>
-            <input type="checkbox" id="menu-toggle" class="hidden">
-            <label for="menu-toggle" class="md:hidden cursor-pointer">
-                <i class="fas fa-bars text-2xl"></i>
-            </label>
-            <ul class="hidden md:flex space-x-6">
-                <li><a href="index.html" class="hover:text-blue-300">Home</a></li>
-                <li><a href="about.html" class="hover:text-blue-300">About</a></li>
-                <li><a href="services.html" class="hover:text-blue-300">Services</a></li>
-                <li><a href="blog.html" class="hover:text-blue-300">Blog</a></li>
-                <li><a href="benefits.html" class="hover:text-blue-300">Benefits</a></li>
-            </ul>
-            <div class="hidden md:block">
-                <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1" class="btn bg-yellow-500 text-black px-4 py-2 rounded hover:bg-yellow-600">Order Now</a>
-            </div>
-        </nav>
-        <!-- Mobile Menu -->
-        <div class="mobile-menu hidden bg-blue-700 text-white">
-            <ul class="flex flex-col space-y-4 p-4">
-                <li><a href="index.html" class="hover:text-blue-300">Home</a></li>
-                <li><a href="about.html" class="hover:text-blue-300">About</a></li>
-                <li><a href="services.html" class="hover:text-blue-300">Services</a></li>
-                <li><a href="blog.html" class="hover:text-blue-300">Blog</a></li>
-                <li><a href="benefits.html" class="hover:text-blue-300">Benefits</a></li>
-                <li><a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1" class="btn bg-yellow-500 text-black px-4 py-2 rounded hover:bg-yellow-600">Order Now</a></li>
-            </ul>
-        </div>
-    </header>
+<body class="bg-gray-100 text-gray-900">
 
-    <!-- Hero Section -->
-    <section class="bg-gray-100 py-16">
-        <div class="container mx-auto flex flex-col md:flex-row items-center">
-            <div class="md:w-1/2 p-4">
-                <h1 class="text-4xl font-bold mb-4">Motion Energy: Feel the Energy in Motion</h1>
-                <p class="text-lg mb-6">Experience <strong>motion energy</strong> with our warming body balm, crafted to soothe muscles and joints. With natural ingredients like Eucalyptus and Rosemary oils, it’s your key to an active, pain-free lifestyle.</p>
-                <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1" class="btn bg-yellow-500 text-black px-6 py-3 rounded hover:bg-yellow-600">Order Now</a>
-            </div>
-            <div class="md:w-1/2 p-4">
-                <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1">
-                    <img src="./Images/home-image/motion energy.jpg" alt="Motion Energy Balm" class="w-full rounded-lg shadow-lg">
-                </a>
-            </div>
-        </div>
-    </section>
+  <!-- Header/Navbar -->
+  <header class="bg-gradient-to-r from-blue-600 to-blue-800 text-white sticky top-0 z-50">
+    <nav class="container mx-auto flex items-center justify-between p-4">
+      <div class="flex items-center gap-4">
+        <img class="w-14 h-14" src="./Images/home-image/motion-energy-logo.png" alt="Logo">
+        <h2 class="text-2xl font-bold"><a href="#/">Motion Energy</a></h2>
+      </div>
 
-    <!-- My Story Section -->
-    <section class="py-16">
-        <div class="container mx-auto text-center">
-            <h2 class="text-3xl font-bold mb-6">My Journey with Motion Energy</h2>
-            <p class="text-lg mb-4">I thought I was facing a serious issue when I felt pain in my chest and under my shoulder blade. After a hospital visit ruled out heart problems, I learned it was muscle and joint discomfort. That’s when I discovered <strong>Motion Energy body balm</strong>. With its natural ingredients like Ginger extract and Cinnamon oil, it brought a soothing warmth that helped me move freely again.</p>
-            <p class="text-lg mb-4">After just a week of using Motion Energy, I felt a surge of <strong>energy and motion</strong>. Now, I’m back to my active lifestyle—yoga, dance, and more—without discomfort holding me back. This balm is my go-to for staying energized!</p>
-            <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1" class="btn bg-yellow-500 text-black px-6 py-3 rounded hover:bg-yellow-600">Try It Now</a>
-        </div>
-    </section>
+      <!-- Hamburger Icon -->
+      <div class="md:hidden">
+        <button id="menu-toggle-btn" class="focus:outline-none">
+          <i class="fas fa-bars text-2xl"></i>
+        </button>
+      </div>
 
-    <!-- Benefits Section -->
-    <section class="bg-gray-100 py-16">
-        <div class="container mx-auto">
-            <h2 class="text-3xl font-bold text-center mb-6">Why Choose Motion Energy?</h2>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <h3 class="text-xl font-semibold mb-2">Warming Comfort</h3>
-                    <p>Feel a gentle warmth that soothes muscles and joints, supporting your active lifestyle.</p>
-                </div>
-                <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <h3 class="text-xl font-semibold mb-2">Natural Ingredients</h3>
-                    <p>Made with Rosemary oil, Eucalyptus oil, and Ginger extract for a chemical-free formula.</p>
-                </div>
-                <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <h3 class="text-xl font-semibold mb-2">Versatile Use</h3>
-                    <p>Perfect for daily use or before workouts to support <strong>motion energy definition</strong>.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+      <!-- Desktop Menu -->
+      <ul class="hidden md:flex space-x-6">
+        <li><a href="#/" class="hover:text-blue-300">Home</a></li>
+        <li><a href="#/about" class="hover:text-blue-300">About</a></li>
+        <li><a href="#/services" class="hover:text-blue-300">Services</a></li>
+        <li><a href="#/blog" class="hover:text-blue-300">Blog</a></li>
+        <li><a href="#/benefits" class="hover:text-blue-300">Benefits</a></li>
+      </ul>
 
-    <!-- Gallery Section -->
-    <section class="py-16">
-        <div class="container mx-auto">
-            <h2 class="text-3xl font-bold text-center mb-6">Explore Motion Energy</h2>
-            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
-                <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1">
-                    <img src="./Images/home-image/motion energy-1.jpg" alt="Motion Energy Product" class="w-full h-60 object-cover rounded-lg">
-                </a>
-                <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1">
-                    <img src="./Images/home-image/motion-energy-3.jpg" alt="Motion Energy Application" class="w-full h-60 object-cover rounded-lg">
-                </a>
-                <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1">
-                    <img src="./Images/home-image/motion energy-2.jpg" alt="Motion Energy Ingredients" class="w-full h-60 object-cover rounded-lg">
-                </a>
-                <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1">
-                    <img src="./Images/home-image/motion-energy-4.jpg" alt="Motion Energy Packaging" class="w-full h-60 object-cover rounded-lg">
-                </a>
-            </div>
-        </div>
-    </section>
+      <!-- Desktop Button -->
+      <div class="hidden md:block">
+        <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1" class="btn bg-yellow-500 text-black px-4 py-2 rounded hover:bg-yellow-600">Order Now</a>
+      </div>
+    </nav>
 
-    <!-- Review Section -->
-    <section class="bg-gray-100 py-16">
-        <div class="container mx-auto">
-            <h2 class="text-3xl font-bold text-center mb-6">What Users Say About Motion Energy</h2>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <img src="./Images/home-image/motion-energy-logo.png" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
-                    <p class="italic">I was skeptical, but Motion Energy changed my mind. It’s better than any massage for my sore muscles!</p>
-                    <p class="mt-4 font-semibold">Luisa Jerezr</p>
-                </div>
-                <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <img src="./Images/home-image/motion-energy-logo.png" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
-                    <p class="italic">This balm is a game-changer. The warming effect helps me stay active without discomfort.</p>
-                    <p class="mt-4 font-semibold">Emilia Serrano
-                    </p>
-                </div>
-                <div class="p-6 bg-white rounded-lg shadow-lg">
-                    
-                    <img src="./Images/home-image/motion-energy-logo.png" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
-                    <p class="italic">I use Motion Energy before workouts, and it keeps my joints feeling great. Highly recommend!</p>
-                    <p class="mt-4 font-semibold">Benito Vilchez</p>
-                </div>
-                <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <img src="./Images/home-image/motion-energy-logo.png" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
-                    <p class="italic">My lower back feels so much better since I started using this balm. It’s a must-have!</p>
-                    <p class="mt-4 font-semibold">Ana Zabala</p>
-                </div>
-                <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <img src="./Images/home-image/motion-energy-logo.png" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
-                    <p class="italic">Motion Energy’s natural formula is amazing. I feel energized and ready for the day!</p>
-                    <p class="mt-4 font-semibold">Sofia Mejias
-                    </p>
-                </div>
-                <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <img src="./Images/home-image/motion-energy-logo.png" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
-                    <p class="italic">I bought this for my parents, and they love it. It’s helped them stay active and comfortable.</p>
-                    <p class="mt-4 font-semibold">Elias Justice </p>
-                </div>
-            </div>
-        </div>
-    </section>
+    <!-- Mobile Menu -->
+    <div id="mobile-menu" class="hidden md:hidden bg-blue-700 text-white">
+      <ul class="flex flex-col space-y-4 p-4">
+        <li><a href="#/" class="hover:text-blue-300">Home</a></li>
+        <li><a href="#/about" class="hover:text-blue-300">About</a></li>
+        <li><a href="#/services" class="hover:text-blue-300">Services</a></li>
+        <li><a href="#/blog" class="hover:text-blue-300">Blog</a></li>
+        <li><a href="#/benefits" class="hover:text-blue-300">Benefits</a></li>
+        <li><a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1" class="btn bg-yellow-500 text-black px-4 py-2 rounded hover:bg-yellow-600">Order Now</a></li>
+      </ul>
+    </div>
+  </header>
 
-    <!-- How It Works -->
-    <section class="py-16">
-        <div class="container mx-auto text-center">
-            <h2 class="text-3xl font-bold mb-6">How Motion Energy Supports You</h2>
-            <p class="text-lg mb-4">Motion Energy is a <strong>motion energy body balm</strong> that delivers a warming sensation to soothe muscles and joints. Its natural ingredients, like Eucalyptus leaf and Cinnamon oil, promote blood circulation and support <strong>energy in motion</strong>.</p>
-            <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1" class="btn bg-yellow-500 text-black px-6 py-3 rounded hover:bg-yellow-600">Get Yours Now</a>
-        </div>
-    </section>
+  <!-- Dynamic Content -->
+  <main id="app" class="container mx-auto py-8 px-4">
+    Loading...
+  </main>
 
-    <!-- Order Process -->
-    <section class="bg-gray-100 py-16">
-        <div class="container mx-auto text-center">
-            <h2 class="text-3xl font-bold mb-6">Flexible Ordering with Motion Energy</h2>
-            <p class="text-lg mb-4">Choose Cash on Delivery (COD) or pay online with our hybrid model. Our call center ensures a smooth purchase process. For Spanish-speaking users in America, our Spanish campaigns offer higher conversion rates!</p>
-            <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1" class="btn bg-yellow-500 text-black px-6 py-3 rounded hover:bg-yellow-600">Place Your Order</a>
-        </div>
-    </section>
-
-    <!-- Call to Action -->
-    <section class="py-16 bg-gradient-to-r from-blue-600 to-blue-800 text-white">
-        <div class="container mx-auto text-center">
-            <h2 class="text-3xl font-bold mb-6">Unlock Your Energy and Motion</h2>
-            <p class="text-lg mb-4">Join countless others who rely on Motion Energy for a comfortable, active lifestyle. Order now and experience the power of <strong>motion energy</strong>!</p>
-            <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1" class="btn bg-yellow-500 text-black px-6 py-3 rounded hover:bg-yellow-600">Order Now</a>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="bg-gray-800 text-white py-8">
-        <div class="container mx-auto text-center">
-            <p class="mb-4">*This Advertorial is based on fiction and any similarity to real people, places, or events are purely coincidental.</p>
-            <p class="mb-4">*The product advertised is a dietary supplement. Dietary supplements are products intended to supplement the diet. They are not medicines and are not intended to treat, diagnose, mitigate, prevent, or cure diseases.</p>
-            <p>© 2025 Motion Energy. All rights reserved.</p>
-        </div>
-    </footer>
-
-    <script>
-        document.getElementById('menu-toggle').addEventListener('change', function() {
-            document.querySelector('.mobile-menu').classList.toggle('hidden');
-        });
-    </script>
+  <!-- JS Router -->
+  <script src="js/router.js"></script>
 </body>
 </html>
