--- a/pages/benefits.html
+++ b/pages/benefits.html
@@ -58,7 +58,7 @@
     <section class="py-12 bg-gray-50">
         <div class="container mx-auto px-4">
             <h2 class="text-2xl md:text-4xl font-bold text-gray-800 text-center mb-8">Soothing Muscle & Joint Support</h2>
-            <img src="./Images/benefit/motion-energy-1.jpg" alt="Soothing Relief with Motion Energy" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/benefit/motion-energy-6.jpg" alt="Soothing Relief with Motion Energy" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 mb-6 md:mb-0">
                     <p class="text-base md:text-lg text-gray-600">
@@ -107,7 +107,7 @@
     <!-- Section 5: Footnotes -->
     <section class="py-8 bg-white">
         <div class="container mx-auto px-4 text-center">
-            <img src="https://via.placeholder.com/600x300?text=Motion+Energy+Info" alt="Motion Energy Information" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
+            <img src="./Images/benefit/motion-energy-5.jpg" alt="Motion Energy Information" class="rounded-lg shadow-lg mx-auto mb-6 max-w-full h-auto">
             <p class="text-xs md:text-sm text-gray-500">
                 *This Advertorial is based on fiction and any similarity to real people, places, or events are purely coincidental.
             </p>
