--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+
+ 
 </head>
 <body class="bg-gray-100 text-gray-900">
 
@@ -62,5 +64,14 @@
 
   <!-- JS Router -->
   <script src="js/router.js"></script>
+  <script>
+        // Toggle mobile menu
+        const menuToggleBtn = document.getElementById("menu-toggle-btn");
+    const mobileMenu = document.getElementById("mobile-menu");
+
+    menuToggleBtn.addEventListener("click", () => {
+      mobileMenu.classList.toggle("hidden");
+    });
+  </script>
 </body>
 </html>
