--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 
   <title>Motion Energy - Warming Body Balm Motion Energy for Muscle Relief </title>
 
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="./Images/home-image/motion-energy-logo.png" type="image/x-icon">
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" />
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
  
