home meta description  updated

--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Motion Energy – a powerful balm to relieve muscle and joint pain. Motion Energy boosts circulation. Try Motion Energy now in the USA.Motion Energy is a natural body balm specially formulated to relieve muscle and joint pain. Whether you're an athlete or work long hours, Motion Energy helps boost blood circulation, reduce inflammation, and provide fast-acting comfort. ">
+    <meta name="description" content="Motion Energy is a powerful balm to relieve muscle and joint pain. Motion Energy boosts circulation. Motion Energy is now in the USA. Motion Energy is a natural body balm specially formulated to relieve muscle and joint pain. Whether you're an athlete or work long hours, Motion Energy helps boost blood circulation. ">
     <title>Motion Energy - Warming Body Balm Motion Energy for Muscle Relief </title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
