--- a/pages/home.html
+++ b/pages/home.html
@@ -90,40 +90,47 @@
     <section class="bg-gray-100 py-16">
         <div class="container mx-auto">
             <h2 class="text-3xl font-bold text-center mb-6">What Users Say About Motion Energy</h2>
+
             <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                 <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <img src="./Images/home-image/motion-energy-logo.png" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
+                    <img src="/Images/home-image/review/motion-energy-1.jpg" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
                     <p class="italic">I was skeptical, but Motion Energy changed my mind. It’s better than any massage for my sore muscles!</p>
                     <p class="mt-4 font-semibold">Luisa Jerezr</p>
                 </div>
+
                 <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <img src="./Images/home-image/motion-energy-logo.png" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
+                    <img src="/Images/home-image/review/motion-energy-2.jpg" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
                     <p class="italic">This balm is a game-changer. The warming effect helps me stay active without discomfort.</p>
                     <p class="mt-4 font-semibold">Emilia Serrano
                     </p>
                 </div>
+
                 <div class="p-6 bg-white rounded-lg shadow-lg">
                     
-                    <img src="./Images/home-image/motion-energy-logo.png" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
+                    <img src="/Images/home-image/review/motion-energy-3.jpg" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
                     <p class="italic">I use Motion Energy before workouts, and it keeps my joints feeling great. Highly recommend!</p>
                     <p class="mt-4 font-semibold">Benito Vilchez</p>
                 </div>
+
                 <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <img src="./Images/home-image/motion-energy-logo.png" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
+                    <img src="/Images/home-image/review/motion-energy-5.jpg" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
                     <p class="italic">My lower back feels so much better since I started using this balm. It’s a must-have!</p>
                     <p class="mt-4 font-semibold">Ana Zabala</p>
                 </div>
+
                 <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <img src="./Images/home-image/motion-energy-logo.png" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
+                    <img src="/Images/home-image/review/motion-energy-4.jpg" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
                     <p class="italic">Motion Energy’s natural formula is amazing. I feel energized and ready for the day!</p>
-                    <p class="mt-4 font-semibold">Sofia Mejias
+                    <p class="mt-4 font-semibold">Ricardo Rull
                     </p>
                 </div>
+
                 <div class="p-6 bg-white rounded-lg shadow-lg">
-                    <img src="./Images/home-image/motion-energy-logo.png" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
+                    <img src="/Images/home-image/review/motion-energy-6.jpg" alt="motion-energy" class="w-16 h-16 shadow-2xl bg-gray-400 rounded-full">
                     <p class="italic">I bought this for my parents, and they love it. It’s helped them stay active and comfortable.</p>
                     <p class="mt-4 font-semibold">Elias Justice </p>
                 </div>
+
             </div>
         </div>
     </section>
