--- a/pages/home.html
+++ b/pages/home.html
@@ -2,17 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Motion Energy is a powerful balm to relieve muscle and joint pain. Motion Energy boosts circulation. Motion Energy is now in the USA. Motion Energy is a natural body balm specially formulated to relieve muscle and joint pain. Whether you're an athlete or work long hours, Motion Energy helps boost blood circulation. ">
+
+    <meta name="keywords" content="Motion Energy,energy in motion,energy and motion,motion energy definition,motion energy body balm, muscle relief balm, warming balm, joint pain, back pain solution" />
+
+<meta name="author" content="Motion Energy Team" />
     <title>Motion Energy - Warming Body Balm Motion Energy for Muscle Relief </title>
+
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     
 
     <!-- Canonical Tag add -->
-     
+    <link rel="canonical" href="https://motion-energy-eight.vercel.app/" />
 
 </head>
 <body class="font-sans text-gray-800">
