--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Motion Energy – a powerful balm to relieve muscle and joint pain. Motion Energy boosts circulation. Try Motion Energy now in the USA.Motion Energy is a natural body balm specially formulated to relieve muscle and joint pain.">
 
+  <meta name="keywords" content="Motion Energy,energy in motion,energy and motion,motion energy definition,motion energy body balm, muscle relief balm, warming balm, joint pain, back pain solution" />
+
+  <meta name="author" content="Motion Energy Team" />
+
   <title>Motion Energy - Warming Body Balm Motion Energy for Muscle Relief </title>
+
+  <!-- Canonical Tag add -->
+  <link rel="canonical" href="https://motion-energy-eight.vercel.app/" />
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="./Images/home-image/motion-energy-logo.png" type="image/x-icon">
