--- a/index.html
+++ b/index.html
@@ -21,6 +21,30 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
+  <!-- schema -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Motion Energy",
+      "url": "https://motion-energy-eight.vercel.app/",
+      "description": "Motion Energy is a warming body balm designed to relieve muscle and joint pain naturally.",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Motion Energy",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://motion-energy-eight.vercel.app/Images/home-image/motion-energy-logo.png"
+        }
+      },
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://motion-energy-eight.vercel.app/?s={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
+    
  
 </head>
 <body class="bg-gray-100 text-gray-900">
