--- a/index.html
+++ b/index.html
@@ -44,7 +44,18 @@
       }
     }
     </script>
-    
+
+<!-- google analytic -->
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C2NQEHWQ7Q"></script>
+
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C2NQEHWQ7Q');
+</script>
  
 </head>
 <body class="bg-gray-100 text-gray-900">
