open graph setup

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Motion Energy – a powerful balm to relieve muscle and joint pain. Motion Energy boosts circulation. Try Motion Energy now in the USA.Motion Energy is a natural body balm specially formulated to relieve muscle and joint pain.">
+  <meta name="description" content="Motion Energy – a powerful balm to relieve muscle and joint pain. Motion Energy boosts circulation. Try Motion Energy now in the USA.Motion Energy is a natural body balm specially formulated to relieve muscle.">
 
   <meta name="keywords" content="Motion Energy,energy in motion,energy and motion,motion energy definition,motion energy body balm, muscle relief balm, warming balm, joint pain, back pain solution" />
 
@@ -59,6 +59,21 @@
  <!-- google index -->
  <meta name="google-site-verification" content="7aqdetw7hLPm2Gl0pEAOMF3vZX0uOMip5T1MFTuGGhE" />
 
+<!-- open graph -->
+ <!-- ✅ Open Graph Meta Tags for Social Media -->
+<meta property="og:title" content="Motion Energy - Warming Body Balm for Muscle Relief" />
+<meta property="og:description" content="Experience fast muscle relief with Motion Energy – the warming body balm that soothes aches and improves circulation." />
+<meta property="og:image" content="https://motion-energy-eight.vercel.app/Images/home-image/motion-energy-logo.png" />
+<meta property="og:url" content="https://motion-energy-eight.vercel.app/" />
+<meta property="og:type" content="website" />
+<meta property="og:site_name" content="Motion Energy" />
+
+<!-- twitter card -->
+ <!-- ✅ Twitter Card Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Motion Energy - Warming Body Balm for Muscle Relief">
+<meta name="twitter:description" content="Experience fast muscle relief with Motion Energy – the warming body balm that soothes aches and improves circulation.">
+<meta name="twitter:image" content="https://motion-energy-eight.vercel.app/Images/home-image/motion-energy-logo.png">
 
 
 </head>
