--- a/pages/home.html
+++ b/pages/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Motion Energy is a powerful balm to relieve muscle and joint pain. Motion Energy boosts circulation. Motion Energy is now in the USA. Motion Energy is a natural body balm specially formulated to relieve muscle and joint pain. Whether you're an athlete or work long hours, Motion Energy helps boost blood circulation. ">
+    <meta name="description" content="Motion Energy is a powerful balm to relieve muscle and joint pain. Motion Energy boosts circulation. Motion Energy is now in the USA. Motion Energy is a natural body balm specially formulated to relieve muscle and joint pain.Motion Energy helps boost blood circulation. ">
 
     <meta name="keywords" content="Motion Energy,energy in motion,energy and motion,motion energy definition,motion energy body balm, muscle relief balm, warming balm, joint pain, back pain solution" />
 
