--- a/pages/home.html
+++ b/pages/home.html
@@ -22,6 +22,31 @@
     <!-- Canonical Tag add -->
     <link rel="canonical" href="https://motion-energy-eight.vercel.app/" />
 
+    <!-- micro formate -->
+<script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Product",
+      "name": "Motion Energy - Warming Body Balm",
+      "image": "https://motion-energy-eight.vercel.app/Images/home-image/motion-energy-logo.png",
+      "description": "Motion Energy Warming Body Balm for muscle relief and pain reduction.",
+      "brand": {
+        "@type": "Brand",
+        "name": "Motion Energy"
+      },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://motion-energy-eight.vercel.app/",
+        "priceCurrency": "USD",
+        "price": "35.9",
+        "availability": "https://schema.org/InStock"
+      }
+    }
+    </script>
+    
+
+
+
 </head>
 <body class="font-sans text-gray-800">
   
