micro formate  setup2

--- a/index.html
+++ b/index.html
@@ -75,7 +75,27 @@
 <meta name="twitter:description" content="Experience fast muscle relief with Motion Energy – the warming body balm that soothes aches and improves circulation.">
 <meta name="twitter:image" content="https://motion-energy-eight.vercel.app/Images/home-image/motion-energy-logo.png">
 
-
+<!-- micro formate -->
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Product",
+    "name": "Motion Energy - Warming Body Balm",
+    "image": "https://motion-energy-eight.vercel.app/Images/home-image/motion-energy-logo.png",
+    "description": "Motion Energy Warming Body Balm for muscle relief and pain reduction.",
+    "brand": {
+      "@type": "Brand",
+      "name": "Motion Energy"
+    },
+    "offers": {
+      "@type": "Offer",
+      "url": "https://motion-energy-eight.vercel.app/",
+      "priceCurrency": "USD",
+      "price": "35.9",
+      "availability": "https://schema.org/InStock"
+    }
+  }
+  </script>
 
 
 </head>
