--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
       <!-- Desktop Menu -->
       <ul class="hidden md:flex space-x-6">
-        <li><a href="/" class="hover:text-blue-300">Home</a></li>
+        <li><a href="#/" class="hover:text-blue-300">Home</a></li>
         <li><a href="#/about" class="hover:text-blue-300">About</a></li>
         <li><a href="#/services" class="hover:text-blue-300">Services</a></li>
         <li><a href="#/blog" class="hover:text-blue-300">Blog</a></li>
@@ -135,7 +135,7 @@
     <!-- Mobile Menu -->
     <div id="mobile-menu" class="hidden md:hidden bg-blue-700 text-white">
       <ul class="flex flex-col space-y-4 p-4">
-        <li><a href="/" class="hover:text-blue-300">Home</a></li>
+        <li><a href="#/" class="hover:text-blue-300">Home</a></li>
         <li><a href="#/about" class="hover:text-blue-300">About</a></li>
         <li><a href="#/services" class="hover:text-blue-300">Services</a></li>
         <li><a href="#/blog" class="hover:text-blue-300">Blog</a></li>
@@ -144,6 +144,10 @@
       </ul>
     </div>
   </header>
+  
+   
+
+
 
   <!-- Dynamic Content -->
   <main id="app" class="container mx-auto py-8 px-4">
