--- a/index.html
+++ b/index.html
@@ -145,6 +145,10 @@
     </div>
   </header>
   
+
+
+  
+
    
 
 
@@ -153,6 +157,118 @@
   <main id="app" class="container mx-auto py-8 px-4">
     Loading...
   </main>
+
+<div class="w-9/12 mx-auto">
+
+<section class="mb-12">
+    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-6">Discover the Power of Motion Energy Body Balm</h2>
+    <h3 class="text-2xl font-semibold text-gray-800 mb-4">The Ultimate Solution for Joint and Muscle Relief</h3>
+    <p class="text-lg text-gray-700 mb-4">
+        For adults over 40 in the USA, maintaining mobility and comfort is essential for an active and fulfilling life. <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1" class="text-blue-600 hover:text-blue-800 font-medium">Motion Energy Body Balm</a> is a revolutionary product designed to address the challenges of joint stiffness, muscle soreness, and general discomfort that often come with age. Whether you’re a busy professional, an active retiree, or someone managing chronic pain, this balm offers a natural, effective solution to keep you moving with ease.
+    </p>
+    <p class="text-lg text-gray-700 mb-4">
+        Unlike oral pain relievers that may cause side effects like stomach upset or drowsiness, Motion Energy Body Balm provides targeted relief directly to the affected area. Its non-greasy, fast-absorbing formula makes it ideal for daily use, whether you’re preparing for a morning jog, recovering from a long day, or simply seeking relief from everyday aches. The balm penetrates deeply to soothe joints and muscles, helping you regain the freedom to enjoy your favorite activities without discomfort.
+    </p>
+    <h4 class="text-xl font-medium text-gray-800 mb-3">Why Motion Energy Stands Out</h4>
+    <p class="text-lg text-gray-700 mb-4">
+        What sets <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1" class="text-blue-600 hover:text-blue-800 font-medium">Motion Energy</a> apart from other topical pain relief products? It’s the combination of scientifically backed ingredients, a user-friendly application, and a commitment to quality that makes it a trusted choice for thousands of Americans. The balm is formulated to deliver fast-acting relief without leaving a sticky residue, making it perfect for those with active lifestyles.
+    </p>
+    <ul class="list-disc list-inside text-lg text-gray-700 mb-4">
+        <li><strong>Fast-Acting Relief:</strong> Feel the soothing effects within minutes of application, allowing you to get back to your day.</li>
+        <li><strong>Natural Ingredients:</strong> Made with plant-based extracts, Motion Energy is safe for daily use without harsh chemicals.</li>
+        <li><strong>Non-Greasy Formula:</strong> Absorbs quickly, so you can apply it before work, exercise, or bedtime without mess.</li>
+        <li><strong>Targeted for 40+ Adults:</strong> Specifically designed to address the unique needs of aging joints and muscles.</li>
+    </ul>
+    <p class="text-lg text-gray-700 mb-4">
+        Whether you’re dealing with occasional soreness from gardening, hiking, or playing with grandkids, or managing chronic conditions like arthritis, Motion Energy Body Balm is your go-to solution. Its portable packaging makes it easy to carry in your bag, so you’re always prepared, whether at home, the gym, or on vacation. Visit <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1" class="text-blue-600 hover:text-blue-800 font-medium">our website</a> to explore how Motion Energy can transform your daily mobility.
+    </p>
+    <h4 class="text-xl font-medium text-gray-800 mb-3">Real-Life Benefits for Active Lifestyles</h4>
+    <p class="text-lg text-gray-700 mb-4">
+        For those over 40, staying active is key to maintaining physical and mental well-being. However, joint and muscle discomfort can make even simple tasks feel daunting. Motion Energy Body Balm empowers you to live life on your terms. Imagine being able to enjoy a round of golf, a yoga class, or a walk in the park without worrying about pain holding you back. This balm is designed to support your active lifestyle, helping you stay engaged in the activities you love.
+    </p>
+    <p class="text-lg text-gray-700 mb-4">
+        Users across the USA have shared stories of how Motion Energy has made a difference in their lives. From retirees rediscovering their passion for outdoor adventures to professionals managing the physical demands of their jobs, this balm has become a staple in their daily routines. Its versatility makes it suitable for a wide range of needs, from post-workout recovery to soothing chronic joint pain caused by conditions like osteoarthritis.
+    </p>
+    <img  src="./Images/benefit/motion-energy-1.jpg" alt="Motion Energy Body Balm for joint and muscle relief for adults 40+" class="w-full md:w-1/2 mx-auto rounded-lg shadow-lg mb-6">
+    <p class="text-lg text-gray-700 mb-4">
+        Ready to experience the difference for yourself? <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1" class="text-blue-600 hover:text-blue-800 font-medium">Order Motion Energy Body Balm</a> today and take the first step toward a more comfortable, active life. With a satisfaction guarantee and easy online ordering, there’s no reason to let joint or muscle discomfort slow you down.
+    </p>
+</section>
+
+<section class="mb-12">
+    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-6">The Science and Simplicity of Motion Energy</h2>
+    <h3 class="text-2xl font-semibold text-gray-800 mb-4">Powerful Ingredients for Lasting Relief</h3>
+    <p class="text-lg text-gray-700 mb-4">
+        The secret to <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1" class="text-blue-600 hover:text-blue-800 font-medium">Motion Energy Body Balm</a>’s effectiveness lies in its carefully curated blend of natural ingredients. Each component is selected for its ability to target inflammation, improve circulation, and promote muscle and joint recovery. This makes the balm an ideal choice for adults over 40 in the USA who are seeking a safe, non-invasive way to manage discomfort and stay active.
+    </p>
+    <h4 class="text-xl font-medium text-gray-800 mb-3">Key Ingredients in Motion Energy Body Balm</h4>
+    <p class="text-lg text-gray-700 mb-4">
+        Motion Energy Body Balm combines time-tested natural extracts with modern science to deliver powerful results. Here are some of the key ingredients that make this product so effective:
+    </p>
+    <ul class="list-disc list-inside text-lg text-gray-700 mb-4">
+        <li><strong>Eucalyptus Oil:</strong> Known for its cooling and anti-inflammatory properties, eucalyptus oil soothes sore muscles and reduces swelling, providing immediate relief.</li>
+        <li><strong>Menthol:</strong> Delivers a cooling sensation that helps alleviate discomfort in joints and muscles, making it easier to move freely.</li>
+        <li><strong>Arnica Extract:</strong> A natural anti-inflammatory, arnica supports recovery from muscle strain and joint stiffness, ideal for those with active lifestyles.</li>
+        <li><strong>Rosemary Oil:</strong> Enhances blood circulation, helping to relieve tension and promote faster recovery from physical exertion.</li>
+        <li><strong>Camphor:</strong> Provides a warming effect that complements the cooling ingredients, creating a balanced sensation for maximum comfort.</li>
+    </ul>
+    <p class="text-lg text-gray-700 mb-4">
+        These ingredients work together to penetrate deep into the skin, targeting the root causes of discomfort rather than just masking symptoms. Unlike other topical products that may rely on harsh chemicals, Motion Energy Body Balm is formulated with natural extracts, making it safe for long-term use. This is especially important for adults over 40, who may be more sensitive to synthetic ingredients or concerned about the side effects of frequent medication use.
+    </p>
+    <h4 class="text-xl font-medium text-gray-800 mb-3">How Motion Energy Supports Long-Term Mobility</h4>
+    <p class="text-lg text-gray-700 mb-4">
+        Aging doesn’t have to mean slowing down. Motion Energy Body Balm is designed to support long-term joint and muscle health, helping you maintain an active lifestyle well into your 40s, 50s, and beyond. By reducing inflammation and improving circulation, the balm helps prevent the buildup of tension that can lead to chronic pain. Regular use can also improve flexibility, making it easier to perform daily tasks like climbing stairs, gardening, or carrying groceries.
+    </p>
+    <p class="text-lg text-gray-700 mb-4">
+        For those with conditions like arthritis or tendonitis, Motion Energy Body Balm offers a complementary approach to traditional treatments. It can be used alongside physical therapy or exercise regimens to enhance recovery and reduce discomfort. The balm’s ability to soothe sore muscles after physical activity also makes it a favorite among those who enjoy sports, fitness classes, or outdoor hobbies.
+    </p>
+    <h4 class="text-xl font-medium text-gray-800 mb-3">How to Use Motion Energy Body Balm</h4>
+    <p class="text-lg text-gray-700 mb-4">
+        Incorporating <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1" class="text-blue-600 hover:text-blue-800 font-medium">Motion Energy Body Balm</a> into your routine is simple and convenient. Follow these steps for optimal results:
+    </p>
+    <ol class="list-decimal list-inside text-lg text-gray-700 mb-4">
+        <li><strong>Clean the Area:</strong> Wash and dry the affected area to ensure the balm can penetrate effectively.</li>
+        <li><strong>Apply a Small Amount:</strong> Take a small dab of the balm and apply it to the sore or stiff area.</li>
+        <li><strong>Massage Gently:</strong> Rub the balm into the skin until fully absorbed, focusing on areas of discomfort.</li>
+        <li><strong>Use Regularly:</strong> Apply 2-3 times daily or as needed for continuous relief and long-term benefits.</li>
+    </ol>
+    <p class="text-lg text-gray-700 mb-4">
+        The balm’s lightweight formula makes it easy to apply without leaving a greasy residue, so you can use it before heading to work, after a workout, or even before bed for overnight relief. Its compact packaging is perfect for travel, ensuring you’re never without your trusted pain relief companion. Whether you’re managing occasional soreness or chronic joint issues, Motion Energy Body Balm is designed to fit seamlessly into your life.
+    </p>
+    <h4 class="text-xl font-medium text-gray-800 mb-3">Who Can Benefit from Motion Energy?</h4>
+    <p class="text-lg text-gray-700 mb-4">
+        Motion Energy Body Balm is tailored for adults over 40 in the USA, but its benefits extend to a wide range of users. Here are just a few examples of who can benefit:
+    </p>
+    <ul class="list-disc list-inside text-lg text-gray-700 mb-4">
+        <li><strong>Active Adults:</strong> Those who enjoy hiking, cycling, or other physical activities and need post-workout recovery support.</li>
+        <li><strong>Office Workers:</strong> Individuals who experience muscle tension from sitting at a desk or using a computer for long hours.</li>
+        <li><strong>Retirees:</strong> Older adults looking to stay active and enjoy hobbies like gardening, golf, or playing with grandchildren.</li>
+        <li><strong>Chronic Pain Sufferers:</strong> Those managing conditions like arthritis, tendonitis, or fibromyalgia who seek a natural complement to their treatment plan.</li>
+    </ul>
+    <p class="text-lg text-gray-700 mb-4">
+        No matter your lifestyle, Motion Energy Body Balm is here to help you move better, feel better, and live better. With its proven formula and easy application, it’s no wonder why so many Americans trust Motion Energy for their joint and muscle relief needs. Don’t let discomfort hold you back—visit <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1" class="text-blue-600 hover:text-blue-800 font-medium">our website</a> to order your Motion Energy Body Balm today and start experiencing the freedom of pain-free movement.
+    </p>
+</section>
+
+</div>
+
+<!-- Call to Action -->
+<section class="py-16 bg-gradient-to-r from-blue-600 to-blue-800 text-white">
+  <div class="container mx-auto text-center">
+      <h2 class="text-3xl font-bold mb-6">Unlock Your Energy and Motion</h2>
+      <p class="text-lg mb-4">Join countless others who rely on Motion Energy for a comfortable, active lifestyle. Order now and experience the power of <strong>motion energy</strong>!</p>
+      <a href="https://uh53fba9e5uh.uewhbgfvds.cc/?target=-7EBNQCgQAAAdTRwQDU3sABQEBEREKEQkKEQ1CEQ0SAAF_YWRjb21ibwEx&al=102622&ap=-1" class="btn bg-yellow-500 text-black px-6 py-3 rounded hover:bg-yellow-600">Order Now</a>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer class="bg-gray-800 text-white py-8">
+  <div class="container mx-auto text-center">
+      <p class="mb-4">*This Advertorial is based on fiction and any similarity to real people, places, or events are purely coincidental.</p>
+      <p class="mb-4">*The product advertised is a dietary supplement. Dietary supplements are products intended to supplement the diet. They are not medicines and are not intended to treat, diagnose, mitigate, prevent, or cure diseases.</p>
+      <p>© 2025 Motion Energy. All rights reserved.</p>
+  </div>
+</footer>
 
   <!-- JS Router -->
   <script src="js/router.js"></script>
@@ -165,5 +281,6 @@
       mobileMenu.classList.toggle("hidden");
     });
   </script>
+
 </body>
 </html>
